--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@
 version: 2
 
 sphinx:
-   configuration: docs/source/conf.py
+   configuration: docs/conf.py
 
 
 python:
@@ -14,4 +14,4 @@ python:
    install:
    - method: pip
      path: .
-   - requirements: docs/source/requirements.txt
+   - requirements: docs/requirements.txt
